Add Vehicle response updated